--- a/src/components/Menu/MenuBar.module.scss
+++ b/src/components/Menu/MenuBar.module.scss
@@ -1,10 +1,9 @@
 .menuWrapper{
     display: flex;
     flex-direction: column;
-    margin-left: 5px;
-    // justify-content: start;
-    // align-items: start;
-   
+    margin: auto;
+    padding-left: 5px;
+    z-index: 12;
 
     .menuButton {
         width: 40px;
