--- a/src/components/PostItem/postItem.module.scss
+++ b/src/components/PostItem/postItem.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  
   width: 50vw;
   margin-top: 20px;
   background-color: rgb(255, 255, 255);
@@ -71,7 +72,11 @@
     }
   }
 
-  
+   @media (max-width: 768px) {
+    width: 90vw;
+ 
+ 
+  }
     
   }
 
