--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -11,4 +11,8 @@
       }
     }
   }
+
+   @media (max-width: 768px) {
+    width: 90%;
+  }
 }
