--- a/src/pages/AddPost/addPost.module.scss
+++ b/src/pages/AddPost/addPost.module.scss
@@ -17,5 +17,11 @@
     .buttons {
       display: inline-block;
     }
+
+     @media (max-width: 768px) {
+    .editor {
+      width: 90vw;
+    }
+  }
   }
 }
